[feature] Save all the headers in the file to each DataArray instead of chosen ones

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,8 @@ dependencies = [
 nanonis = "xarray_nanonis.NanonisBackendEntrypoint:NanonisBackendEntrypoint"
 
 [tool.setuptools_scm]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.9.10",
+]
