--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,17 @@ nanonis = "xarray_nanonis.NanonisBackendEntrypoint:NanonisBackendEntrypoint"
 
 [tool.setuptools_scm]
 
+[tool.ruff]
+line-length=120
+
+[tool.ruff.lint]
+extend-select = ["I", "PT", "NPY"]
+extend-unsafe-fixes = ["F401"]
+
 [dependency-groups]
 dev = [
+    "mypy>=1.15.0",
+    "pandas-stubs>=2.2.2.240807",
+    "pytest>=8.3.5",
     "ruff>=0.9.10",
 ]
